<resources>
    <string name="app_name">Kini News</string>
    <string name="desc_splash">Starting App</string>
    <string name="txtLogin">Masuk</string>
    <string name="desc_cancel">Quit Application</string>
    <string name="desc_imgAppLogo">Kini News App Logo</string>
    <string name="txtClear">Clear</string>
    <string name="editEmail">E-mail</string>
    <string name="editPassword">Password</string>
    <string name="showPassword">Tampilkan kata sandi</string>
    <string name="btnLogin">Masuk</string>
    <string name="txtHelpRegister">Tidak memiliki akun?</string>
    <string name="btnTextRegister">Daftar Akun</string>

    <string name="txtRegister">Daftar</string>>
    <string name="editFullname">Nama Lengkap</string>
    <string name="editRepeatPassword">Ulangi Password</string>
    <string name="btnRegister">Daftar</string>
    <string name="txtHelpLogin">Sudah memiliki akun?</string>
    <string name="btnTextLogin">Masuk</string>

    <string name="btnAccount">Akun</string>
    <string name="btnContact">Profil</string>

    <string name="btnBack">Back Menu</string>
    <string name="btnProfil">PROFIL</string>

    <string name="descFoto">Foto Profil</string>
    <string name="txtEmail">email@gmail.com</string>
    <string name="btnLogout">KELUAR AKUN</string>

    <string name="txtKontak">KONTAK</string>
    <string name="txtHubungi">HUBUNGI KAMI</string>
    <string name="txtGmail">GMAIL</string>
    <string name="txtWA">WHATSAPP</string>

</resources>